# Museion

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  next.config.ts  package-lock.json  package.json  pyproject.toml
docs/: BUILD_LOG.md  BUILD_WEEK_DELTA.md  CHILD_SAFETY_AND_AGE_APPROPRIATE_DESIGN.md  CODEX_USAGE.md  CURRICULUM_ARCHITECTURE.md  EVALS.md  LEARNING_SCIENCE.md  MCP_COURSE_ARCHITECT.md  MUSEION_METHOD.md  RESEARCH_SOURCES.md  THIRD_PARTY_NOTICES.md
scripts/: capture-screenshots.mjs  generate-golden-course.mjs  generate-golden-source.mjs  verify-bundle.mjs  verify-ui.mjs
tests/: ai-diagnostics.test.ts  ai-routing.test.ts  bounded-cache.test.ts  codex-device-login.test.ts  compiler-codex.live.test.ts  compiler-contracts.test.ts  compiler-openai-provider.test.ts  compiler-orchestrator.test.ts  compiler-runs.test.ts  content.test.ts  course-algebra-as-balance.test.ts  course-artifact.test.ts  course-authoring-pathways.test.ts  course-search-by-halving.test.ts  creator-draft.test.ts  curriculum.test.ts  dashboard.test.ts  durable-state.test.ts  evidence.test.ts  fetch-with-timeout.test.ts  highlights.test.ts  judge-store.test.ts  leak.test.ts  maia-activity.test.ts  mastery.test.ts  mcp.test.ts  pdf-limit.test.ts  practice.test.ts  profile.test.ts  prompt.test.ts  rate-limit.test.ts  redteam.live.test.ts  research-method-course-authoring.test.ts  revisit.test.ts  runtime-tutor.test.ts  runtime.test.ts  session-access.test.ts  session.test.ts  source-pack-coverage.test.ts  source-pack.test.ts  (+9 more)
video/: .gitignore  README.md  VOICEOVER_SCRIPT.md  (+2 more)
(+277 files in other folders)
