[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "museion"
version = "0.1.0"
description = "Museion — an interactive learning platform with Maia, a Socratic AI tutor that never gives away the answer. Deterministic lesson engine for ground truth, LLM for pedagogy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Museion" }]
keywords = ["education", "ai-tutor", "socratic-method", "learning", "edtech"]
dependencies = [
    "anthropic>=0.100",
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
museion = "museion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
museion = ["content/lessons/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
